--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,18 @@
 
 	<modules>
 		<module>blok1</module>
+		<module>blok2</module>
 	</modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-engine</artifactId>
+				<version>5.6.0</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 </project>
