--- a/blok2/pom.xml
+++ b/blok2/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>blok2</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+    </dependencies>
 
 </project>
