--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>nl.bramjanssens</groupId>
-	<artifactId>bd2020-parent</artifactId>
+	<artifactId>bd2020-live-code-parent</artifactId>
 	<version>1.0</version>
 	<packaging>pom</packaging>
 
