--- a/blok2/pom.xml
+++ b/blok2/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>bd2020-live-code-parent</artifactId>
+        <artifactId>bd2020-live-code</artifactId>
         <groupId>nl.bramjanssens</groupId>
         <version>1.0</version>
     </parent>
