--- a/blok1/pom.xml
+++ b/blok1/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>blok1</artifactId>
 
     <parent>
-        <groupId>nl.bramjanssens</groupId>
+        <groupId>com.example</groupId>
         <artifactId>bd2020-live-code</artifactId>
         <version>1.0</version>
     </parent>
