--- a/blok2/pom.xml
+++ b/blok2/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bd2020-live-code</artifactId>
-        <groupId>nl.bramjanssens</groupId>
+        <groupId>com.example</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
