--- a/blok2/jpa/pom.xml
+++ b/blok2/jpa/pom.xml
@@ -13,7 +13,7 @@
 
     <dependencies>
         <!-- JPA ******************************************** -->
-        <!-- via hibernate:
+        <!-- provided by hibernate:
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
@@ -31,7 +31,7 @@
         </dependency>
 
         <!-- Validation: ******************************************** -->
-        <!-- via hibernate:
+        <!-- provided by hibernate-validator:
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
@@ -48,23 +48,27 @@
             <version>3.0.0</version>
         </dependency>
 
-        <!-- logging -->
+        <!-- Logging: ******************************************** -->
+        <!-- provided by log4j:
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.11.2</version>
-        </dependency>
+        </dependency>-->
+
+        <!-- provided by log4j-slf4j-impl:
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.11.2</version>
-        </dependency>
+        </dependency>-->
+
+        <!-- not needed when not using slf4j -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.11.2</version>
         </dependency>
     </dependencies>
-
 
 </project>
