--- a/blok2/jpa/pom.xml
+++ b/blok2/jpa/pom.xml
@@ -56,7 +56,7 @@
             <version>2.11.2</version>
         </dependency>-->
 
-        <!-- provided by log4j-slf4j-impl:
+        <!-- provided by log4j-slf4j-impl: TRANSITIVE DEPENDENCY
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
