--- a/blok2/jpa/pom.xml
+++ b/blok2/jpa/pom.xml
@@ -12,6 +12,10 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+        </dependency>
         <!-- JPA ******************************************** -->
         <!-- provided by hibernate:
         <dependency>
@@ -67,7 +71,6 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.11.2</version>
         </dependency>
     </dependencies>
 
