--- a/blok2/pom.xml
+++ b/blok2/pom.xml
@@ -17,5 +17,14 @@
         <module>jpa</module>
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>2.11.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
