--- a/blok2/jpa/pom.xml
+++ b/blok2/jpa/pom.xml
@@ -99,6 +99,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <skip>${skipUnitTests}</skip>
+                </configuration>
+            </plugin>
+
             <!-- Make sure integration test classes end with 'IT' -->
             <!-- Only integration tests: mvn integration-test -DskipUnitTests-->
             <plugin>
