--- a/blok4/jee7/pom.xml
+++ b/blok4/jee7/pom.xml
@@ -3,18 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>bd2020-live-code</artifactId>
+        <artifactId>blok4</artifactId>
         <groupId>com.example</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>pom</packaging>
-    <artifactId>blok2</artifactId>
+    <artifactId>jee7</artifactId>
 
     <modules>
-        <module>jdbc</module>
-        <module>jpa</module>
+        <module>cdi</module>
     </modules>
 
 </project>
