--- a/blok4/pom.xml
+++ b/blok4/pom.xml
@@ -10,11 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>pom</packaging>
-    <artifactId>blok2</artifactId>
+
+    <artifactId>blok4</artifactId>
 
     <modules>
-        <module>jdbc</module>
-        <module>jpa</module>
+        <module>jee7</module>
     </modules>
 
 </project>
