--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <modules>
         <module>blok1</module>
         <module>blok2</module>
+        <module>blok4</module>
+        <module>cdi</module>
     </modules>
 
     <dependencyManagement>
@@ -45,6 +47,26 @@
                 <artifactId>assertj-core</artifactId>
                 <version>3.14.0</version>
                 <scope>test</scope>
+            </dependency>
+
+            <!-- CDI: ******************************************** -->
+            <dependency>
+                <groupId>org.jboss.weld.se</groupId>
+                <artifactId>weld-se-core</artifactId>
+                <!-- See for versions: https://weld.cdi-spec.org/documentation/#9 -->
+                <version>2.4.8.Final</version>       <!--contains CDI1.2-->
+                <!--<version>3.1.2.Final</version>--><!--contains CDI2.0-->
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.weld</groupId>
+                <artifactId>weld-junit5</artifactId>
+                <version>2.0.1.Final</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>2.11.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
