--- a/blok4/jee7/rest/pom.xml
+++ b/blok4/jee7/rest/pom.xml
@@ -57,11 +57,13 @@
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>jpa</artifactId>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>jpa</artifactId>
             <type>test-jar</type>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
