--- a/blok4/jee7/rest/pom.xml
+++ b/blok4/jee7/rest/pom.xml
@@ -127,24 +127,13 @@
     <!-- mvn liberty:stop -->
 
     <!-- To generate and view swagger-ui:
-     Package and deploy the war and start the appserver.
+     Package and deploy the war on the appserver.
      Navigate to http://<host>:<port>/<appname>/<apppath>/apiee/
               ie http://localhost:9080/rest_war_exploded/resources/apiee/
      -->
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-            <!-- To run on new Java versions -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-
             <!-- Run IT-tests during mvn verify -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
